--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
+    "heroku-postbuild": "npm run build",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint": "npm run lint:js"
+  },
+  "engines": {
+    "node": "8.0.0",
+    "npm": "5.0.0"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
